# alpaca_stream_ingestion

./: .dockerignore  .gitignore  README.md  STRIMZI_KAFKA_CONNECT_GUIDE.md  Todo  alpaca_login_stuff.txt  aribtrary_commands.txt  bootstrapServers: my-cluster-kafka-boots.yml  common_config.py  cron_script.sh  cron_trigger.sh  dataproc_utils.py  docker_perms.sh  main.py  pyproject.toml  set_up_dev.txt  setup.sh  setup_infra.sh  sonnet_setup_infra.sh  startup.py  startup.sh  systemd_install.sh  test.sh  test_new.sh  test_new_2.sh
MonitoringSuite/: pom.xml
MonitoringSuite2/: .gitignore  IMPLEMENTATION_SUMMARY.md  LEARNING_PATH.md  README.md  build.gradle  settings.gradle
_oldgcp/: cobf_reader_gcs.py  conf_reader.py  set_up_dev.txt  startup.py
config/: config.yaml
docs/: PIPELINE.md  SETUP.md  TROUBLESHOOTING.md  USAGE.md
extract/: Dockerfile  alpaca_ws_updated.py  alpaca_ws_updated_conf.py  compare_spark_kafka_offsets.py  get_kakfa_offsets.py  kafka_alpaca_producer_ws.py  kakfa_commands.txt  pyproject.toml  requirements.txt
iceberg/: alpaca_raw_trade.sql
load/: create.py  pinot_qeury_display.py  record_samples  schema.json  table.json
minikube/: Untitled1.ipynb  commands.txt  minikube_notes.txt  out_2.yaml  rbac.yaml  spark-values.yaml  spark_kafka_test.py
scripts/: 1_install_dependencies.sh  1_install_dependencies_new.sh  2_setup_kubernetes.sh  2_setup_kubernetes_new.sh  3_setup_apps.sh  3_setup_apps_new.sh  build_kafka_connect_image.sh  install_helm_chart_requirements.sh  multipassstartup.txt  setup_all.sh  setup_infrastructure.py
transform/: a_new.py  (+8 more)
(+168 files in other folders)
