[project]
name = "alpaca-stream-ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiokafka>=0.12.0",
    "confluent-kafka>=2.10.0",
    "google-api-python-client>=2.172.0",
    "google-cloud-dataproc>=5.20.0",
    "google-cloud-logging>=3.12.0",
    "google-cloud-storage>=3.1.0",
    "jupyterlab>=4.4.4",
    "kafka-python-ng>=2.2.3",
    "pandas>=2.3.3",
    "pyspark==3.5.1",
    "python-snappy>=0.7.3",
    "pyyaml>=6.0.2",
    "tabulate>=0.9.0",
    "websockets>=15.0.1",
]

[tool.uv.workspace]
members = []

